<resources>
    <string name="app_name">Quotograph</string>
    <string name="wallpaper_author" translatable="false">Stanley Idesis</string>
    <string name="wallpaper_description">A live wallpaper featuring inspirational quotes</string>
    <string name="search_hint">\"Motivation,\" \"Gandhi,\" \"Love…\"</string>
    <string name="quote_hint">e.g. \"Be yourself; everyone else is already taken.\"</string>
    <string name="author_hint">e.g. \"Oscar Wilde\"</string>
    <string name="inspirational_quote_0">Start by doing what\'s necessary; then do what\'s possible; and suddenly you are doing the impossible.</string>
    <string name="inspirational_author_0" translatable="false">Francis of Assisi</string>
    <string name="inspirational_quote_1">The best and most beautiful things in the world cannot be seen or even touched - they must be felt with the heart.</string>
    <string name="inspirational_author_1" translatable="false">Helen Keller</string>
    <string name="inspirational_quote_2">I can\'t change the direction of the wind, but I can adjust my sails to always reach my destination.</string>
    <string name="inspirational_author_2" translatable="false">Jimmy Dean</string>
    <string name="category_inspirational">Inspirational</string>
    <string name="category_motivational">Motivational</string>
    <string name="category_funny">Funny</string>
    <string name="category_love">Love</string>
    <string name="category_life">Life</string>
    <string name="category_success">Success</string>
    <string name="category_happiness">Happiness</string>
    <string name="category_wisdom">Wisdom</string>
    <string name="category_change">Change</string>
    <string name="category_leadership">Leadership</string>
    <string name="category_work">Work</string>
    <string name="category_friendship">Friendship</string>
    <string name="category_freedom">Freedom</string>
    <string name="inspirational_quote_3">Perfection is not attainable, but if we chase perfection we can catch excellence.</string>
    <string name="inspirational_author_3" translatable="false">Vince Lombardi</string>
    <string name="inspirational_quote_4">If opportunity doesn\'t knock, build a door.</string>
    <string name="inspirational_author_4">Milton Berle</string>
    <string name="inspirational_quote_5">Try to be a rainbow in someone\'s cloud.</string>
    <string name="inspirational_author_5">Maya Angelou</string>
    <string name="inspirational_quote_6">Nothing is impossible, the word itself says \'I\'m possible\'!</string>
    <string name="inspirational_author_6">Audrey Hepburn</string>
    <string name="inspirational_quote_7">Put your heart, mind, and soul into even your smallest acts. This is the secret of success.</string>
    <string name="inspirational_author_7">Swami Sivananda</string>
    <string name="inspirational_quote_8">We know what we are, but know not what we may be.</string>
    <string name="inspirational_author_8">William Shakespeare</string>
    <string name="inspirational_quote_9">It is during our darkest moments that we must focus to see the light.</string>
    <string name="inspirational_author_9">Aristotle Onassis</string>
    <string name="unknown">Unknown</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</string>
    <string name="activate">Sweet</string>
    <string name="error_wallpaper_chooser">Couldn\'t launch wallpaper chooser. You can still activate Quotograph by choosing \'Live Wallpapers\' in your home screen wallpaper picker.</string>
    <string name="period_preference_dont_refresh">Never</string>
    <string name="period_preference_half_hour">Every 30 Minutes</string>
    <string name="period_preference_one_hour">Every Hour</string>
    <string name="period_preference_six_hours">Every Six Hours</string>
    <string name="period_preference_twelve_hours">Every 12 Hours</string>
    <string name="period_preference_twenty_four_hours">Every Day</string>
    <string name="period_preference_one_week">Every Week</string>
    <string name="new_quotograph">New Quotograph</string>
    <string name="share_using">Share with…</string>
    <string name="toast_disable_refresh">Refreshing disabled. To re-enable, go to settings.</string>
    <string name="share">Share</string>
    <string name="save_to_disk">Save to Disk</string>
    <string name="skip">Skip</string>
    <string name="saving_quotograph">Saving Quotograph as image…</string>
    <string name="notification_title_save_image">Quotograph Saved</string>
    <string name="notification_content_save_image">We saved your Quotograph as an image. Click here to view.</string>
    <string name="view_using">View with…</string>
    <string name="notification_title_save_failed">Failed to save Quotograph</string>
    <string name="notification_content_save_failed">Click here to retry.</string>
    <string name="tutorial_headline_0">Welcome,</string>
    <string name="tutorial_headline_1">And Sets</string>
    <string name="tutorial_headline_2">It chooses</string>
    <string name="tutorial_headline_3">And creates</string>
    <string name="tutorial_headline_4">Just Tap</string>
    <string name="tutorial_detail_0">Quotograph makes beautiful images</string>
    <string name="tutorial_detail_1">them as your wallpaper.</string>
    <string name="tutorial_detail_2">from your favorite quotes</string>
    <string name="tutorial_detail_3">new images on a schedule.</string>
    <string name="tutorial_detail_4">\'Set wallpaper,\' after pressing this sweet button:</string>
    <string name="category">Category</string>
    <string name="author">Author</string>
    <string name="quote">Quote</string>
    <string name="quotes_by">Quotes by %1$s</string>
    <string name="blank_quotes">%1$s quotes</string>
    <string name="network_connection_required_title">Network Access Unavailable</string>
    <string name="network_connection_required_message">Quotograph requires access to the Internet to continue, please enable WiFi or a Network Data Connection.</string>
    <string name="network_connection_required_negative">Open Network Settings</string>
    <string name="network_connection_established_title">Network Access Established</string>
    <string name="network_connection_established_message">Thank you for your patience. Quotograph is getting back to work.</string>
    <string name="network_connection_established_positive">Heck, yeah!</string>
    <string name="first_launch_task_failed">Unable to setup Quotograph</string>
    <string name="write_external_permission_denied_toast">Saving a Quotograph requires additional permissions</string>
    <string name="save_failed">Failed to save your Quotograph :(</string>
    <string name="failed_to_generate_wallpaper">Whoops! We couldn\'t make a new Quotograph, please try again.</string>
    <string name="toast_tap_set_wallpaper">Press, \'Set wallpaper,\' to use Quotograph</string>
    <string name="notification_generation_failure_title">Quotograph failed to refresh</string>
    <string name="notification_generation_failure_ticker">:\'-(</string>
    <string name="notification_generation_failure_content">To see a new quote, make sure your device has access to the internet, then tap here to try again.</string>
    <string name="notification_generation_failure_action_try_again">Retry</string>
    <string name="notification_generation_failure_action_settings">Settings</string>
    <string name="font_abril_fatface">Abril</string>
    <string name="font_amatic_sc">Amatic SC</string>
    <string name="font_anton">Anton</string>
    <string name="font_black_ops_one">Black Ops One</string>
    <string name="font_cabin_sketch">Cabin Sketch</string>
    <string name="font_finger_paint">Finger Paint</string>
    <string name="font_fredericka_the_great">Fredericka The Great</string>
    <string name="font_josefin_sans_bold">Josefin Sans</string>
    <string name="font_special_elite">Special Elite</string>
    <string name="font_spirax">Spirax</string>
    <string name="font_system">System Font</string>
    <string name="font_unica_one">Unica One</string>
    <string name="font_vt323">VT323</string>
    <string name="tt_swipe_left_wallpaper">Swipe left (←) for quotes</string>
    <string name="tt_swipe_left_playlist">Swipe left (←) again for settings</string>
    <string name="tt_share_quotograph">Share the quote with your favorite apps</string>
    <string name="tt_save_quotograph">Save the Quotograph as an image</string>
    <string name="tt_skip_quotograph">Don\'t like this Quotagraph? Skip it</string>
    <string name="tt_add_quotes">Add more quotes</string>
    <string name="tt_search_for_quotes">Search for quotes, authors, and categories</string>
    <string name="tt_write_quotes">Or create your own</string>
    <string name="tt_exit_add">Tap again to exit</string>
    <string name="tt_setting_info">Touch any setting to learn more</string>
    <string name="tt_setting_blur">Blurry images make reading the quote even easier. Blurring requires extra memory</string>
    <string name="tt_setting_dim">Dim the image to make the quote stand out</string>
    <string name="tt_setting_fonts">Select your favorite fonts and Quotograph will pick one at random</string>
    <string name="tt_setting_images">Select photo categories and your own photos to use as backgrounds</string>
    <string name="tt_setting_refresh">Choose how often you want Quotograph to make a new wallpaper</string>
    <string name="tt_setting_double_tap">This option lets you double-tap your home screen to launch Quotograph</string>
    <string name="tt_setting_whats_new">Tap here to read about the newest features</string>
    <string name="survey_title">Thank you for using Quotograph!</string>
    <string name="survey_cta">Do you have <b>5 minutes</b> to help me improve the app?</string>
    <string name="survey_never">No :\'(</string>
    <string name="survey_later">Later</string>
    <string name="survey_okay">Take Survey</string>
    <string name="tutorial_dialog_title">Welcome to Quotograph!</string>
    <string name="tutorial_dialog_message">Would you like a quick tour?</string>
    <string name="tutorial_dialog_positive">Yes, Please!</string>
    <string name="tutorial_dialog_negative">Not Now</string>
    <string name="thank_you_title">Thank You For Supporting Quotograph!</string>
    <string name="thank_you_message">We\'ve disabled your ads, and replaced them with puppies!</string>
    <string name="thank_you_negative">Done</string>
    <string name="thank_you_positive">Review Quotograph</string>
    <string name="remove_ads_title">Remove Ads</string>
    <string name="remove_ads_description">Love Quotograph but hate the ads? Support the app by removing them once and for all.</string>
    <string name="remove_ads_banner">Ads Suck: Tap Here to Kill Them</string>
    <string name="whats_new_dialog_title">What\'s New!</string>
</resources>