<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_transparent">

    <RelativeLayout
        android:id="@+id/rl_lwq_survey_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:background="@color/palette_A100">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/tv_lwq_survey_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:text="@string/survey_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/tv_lwq_survey_cta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:text="@string/survey_cta"
            android:layout_below="@+id/tv_lwq_survey_title"
            android:layout_marginTop="8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tv_lwq_survey_cta"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="32dp">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_lwq_survey_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="start|left|center_vertical"
                android:text="@string/survey_never"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_lwq_survey_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btn_lwq_survey_positive"
                android:layout_toStartOf="@+id/btn_lwq_survey_positive"
                android:text="@string/survey_later"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_lwq_survey_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/palette_900"
                android:text="@string/survey_okay"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>