<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        style="@style/Theme.LWQ.TextAppearance.Settings.EditQuote.Quote"
        android:id="@+id/tv_tut_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_headline_4"
        android:textSize="44sp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        app:layout_widthPercent="80%"
        app:layout_marginTopPercent="5%"/>

    <TextView
        style="@style/Theme.LWQ.TextAppearance.Settings.EditQuote.Author"
        android:id="@+id/tv_tut_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tut_headline"
        android:layout_alignLeft="@+id/tv_tut_headline"
        android:layout_alignStart="@id/tv_tut_headline"
        android:text="@string/tutorial_detail_4"
        android:textSize="30sp"
        app:layout_widthPercent="80%"/>

    <Button
        android:id="@+id/button_lwq_activate"
        android:layout_height="140dp"
        android:layout_width="140dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_tut_details"
        android:background="@drawable/circle_button"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:text="@string/activate"
        android:textColor="@color/palette_900"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:alpha="0"
        android:enabled="false"
        app:layout_marginTopPercent="10%"/>

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:id="@+id/pb_lwq_activate"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:alpha="0"
        app:layout_marginTopPercent="10%"/>

</android.support.percent.PercentRelativeLayout>